// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer fixed should apply fixed class 1`] = `
<div
  className="footer fixed"
/>
`;

exports[`Footer should match snapshot 1`] = `
<div
  className="footer"
/>
`;

exports[`Footer should take regular element attributes 1`] = `
<div
  className="footer my-class"
/>
`;

exports[`Footer sticky should apply sticky class 1`] = `
<div
  className="footer sticky"
/>
`;
